'自定义送礼按钮'

--- a/settings.gradle
+++ b/settings.gradle
@@ -8,3 +8,5 @@ include ':comp_imgpicker'
 include ':comp_viewmodel'
 include ':module_navigation'
 include ':comp_base'
+include ':comp_netstudyt'
+include ':comp_im'
