--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,13 +43,10 @@ dependencies {
     implementation(project(':comp_imgpicker'))
     implementation(project(':comp_viewmodel'))
     implementation(project(':module_navigation'))
-
+    implementation(project(':comp_netstudyt'))
     implementation(project(':comp_base'))
-    //kotlin协程
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.5'
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.5"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core-common:1.3.4"
-    implementation 'com.android.support:multidex:1.0.3'
+
+
 
 }
 repositories {
