--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
     <uses-permission
         android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS"
         tools:ignore="ProtectedPermissions" />
-    <uses-permission android:name="android.permission.CAMERA"/>
+    <uses-permission android:name="android.permission.CAMERA" />
 
     <application
         android:allowBackup="true"
@@ -25,7 +25,8 @@
         <activity android:name=".ossstudy.OssStudyActivity" />
         <activity android:name=".webview.WebViewStudy" />
         <activity android:name=".permissionstudy.PermissionStudyActivity" />
-        <activity android:name=".viewdraghelper.ViewDragerStudyActivity"/>
+        <activity android:name=".viewdraghelper.ViewDragerStudyActivity" />
+        <activity android:name=".sendgift.SendGiftActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
