--- a/comp_im/build.gradle
+++ b/comp_im/build.gradle
@@ -23,26 +23,9 @@ android {
     }
 
 }
-
 dependencies {
 
-    api deps.app_compat
-    api deps.constraintlayout
-    api 'androidx.appcompat:appcompat:1.1.0'
-    api 'androidx.constraintlayout:constraintlayout:1.1.3'
-    testImplementation deps.junit
-    androidTestImplementation deps.atsl.ext_junit
-    androidTestImplementation deps.espresso.core
-    api deps.core_ktx
-    api deps.kotlin.stdlib
-    //权限请求
-    api 'pub.devrel:easypermissions:3.0.0'
+    implementation(project(':comp_base'))
 
-    //kotlin协程
-    api deps.kotlin.core
-    api deps.kotlin.kandroid
-    api deps.kotlin.kcm
-    api deps.kotlin.multidex
-    api 'com.squareup.retrofit2:adapter-rxjava2:2.7.2'//RxJava2CallAdapterFactory
-    api 'io.reactivex.rxjava2:rxandroid:2.1.1'
+    implementation 'com.tencent.imsdk:imsdk:4.8.10'
 }
