--- a/comp_netstudyt/build.gradle
+++ b/comp_netstudyt/build.gradle
@@ -23,26 +23,22 @@ android {
     }
 
 }
-
 dependencies {
 
-    api deps.app_compat
-    api deps.constraintlayout
-    api 'androidx.appcompat:appcompat:1.1.0'
-    api 'androidx.constraintlayout:constraintlayout:1.1.3'
-    testImplementation deps.junit
-    androidTestImplementation deps.atsl.ext_junit
-    androidTestImplementation deps.espresso.core
-    api deps.core_ktx
-    api deps.kotlin.stdlib
-    //权限请求
-    api 'pub.devrel:easypermissions:3.0.0'
+    implementation(project(':comp_base'))
+    // ViewModel and LiveData
+    api 'androidx.lifecycle:lifecycle-extensions:2.2.0'
+    // Java8 support for Lifecycles
+    api 'androidx.lifecycle:lifecycle-common-java8:2.2.0'
+    //retrofit2 依赖库
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    //Gson 数据解析器依赖库
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    //okhttp3 输出网络请求日志依赖库
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.2.2'
+    implementation deps.lifecycle_version
+    implementation deps.viewModel
+    implementation deps.liveData
 
-    //kotlin协程
-    api deps.kotlin.core
-    api deps.kotlin.kandroid
-    api deps.kotlin.kcm
-    api deps.kotlin.multidex
-    api 'com.squareup.retrofit2:adapter-rxjava2:2.7.2'//RxJava2CallAdapterFactory
-    api 'io.reactivex.rxjava2:rxandroid:2.1.1'
+
 }
