--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,7 @@
         <activity android:name=".viewdraghelper.ViewDragerStudyActivity" />
         <activity android:name=".sendgift.SendGiftActivity" />
         <activity android:name=".customdropdown.DropDownActivity"/>
+        <activity android:name=".soul.activity.SoulActivity"/>
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
