'增加了视频观看切换'

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,7 @@ dependencies {
     implementation(project(':module_navigation'))
     implementation(project(':comp_netstudyt'))
     implementation(project(':comp_base'))
+    implementation(project(':comp_live'))
 
 
 
