--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,8 +27,9 @@
         <activity android:name=".permissionstudy.PermissionStudyActivity" />
         <activity android:name=".viewdraghelper.ViewDragerStudyActivity" />
         <activity android:name=".sendgift.SendGiftActivity" />
-        <activity android:name=".customdropdown.DropDownActivity"/>
-        <activity android:name=".soul.activity.SoulActivity"/>
+        <activity android:name=".customdropdown.DropDownActivity" />
+        <activity android:name=".soul.activity.SoulActivity" />
+        <activity android:name=".piaodanmu.DanMuActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
