--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,6 +32,7 @@
         <activity android:name=".piaodanmu.DanMuActivity" />
         <activity android:name=".customtab.TabActivity"/>
         <activity android:name=".loadingactivity.WuBaActivity"/>
+        <activity android:name=".databingstudy.DatabindStudyActivity"/>
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
