--- a/comp_netstudyt/build.gradle
+++ b/comp_netstudyt/build.gradle
@@ -26,19 +26,8 @@ android {
 dependencies {
 
     implementation(project(':comp_base'))
-    // ViewModel and LiveData
-    api 'androidx.lifecycle:lifecycle-extensions:2.2.0'
-    // Java8 support for Lifecycles
-    api 'androidx.lifecycle:lifecycle-common-java8:2.2.0'
-    //retrofit2 依赖库
-    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-    //Gson 数据解析器依赖库
-    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
-    //okhttp3 输出网络请求日志依赖库
-    implementation 'com.squareup.okhttp3:logging-interceptor:4.2.2'
-    implementation deps.lifecycle_version
-    implementation deps.viewModel
-    implementation deps.liveData
+    implementation(project(':lib_network'))
+
 
 
 }
