--- a/lib_network/build.gradle
+++ b/lib_network/build.gradle
@@ -23,16 +23,22 @@ android {
     }
 
 }
-
 dependencies {
+
     implementation(project(':comp_base'))
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
-    implementation 'com.scwang.smartrefresh:SmartRefreshLayout:1.1.2'
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     // ViewModel and LiveData
     api 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     // Java8 support for Lifecycles
     api 'androidx.lifecycle:lifecycle-common-java8:2.2.0'
-    implementation(project(':lib_network'))
+    //retrofit2 依赖库
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    //Gson 数据解析器依赖库
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    //okhttp3 输出网络请求日志依赖库
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.2.2'
+    implementation deps.lifecycle_version
+    implementation deps.viewModel
+    implementation deps.liveData
+
 
 }
