--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-kapt'
 
 
 android {
@@ -67,8 +68,14 @@ dependencies {
     implementation(project(':comp_im'))
     implementation(project(':comp_chat'))
     implementation(project(':lib_im'))
-    implementation(project(':lib_save'))
+    implementation(project(':lib_save')){
+        exclude group: "com.tencent"
+    }
 
+
+    api 'com.pince.maven:comp-datasource-new:1.0.0'
+    kapt 'com.pince.maven:comp-repositycp:1.0.1'
+    api "com.pince.maven:comp-annotation:1.0.0"
 
 }
 repositories {
