--- a/comp_base/build.gradle
+++ b/comp_base/build.gradle
@@ -47,6 +47,7 @@ dependencies {
     api 'com.squareup.retrofit2:adapter-rxjava2:2.7.2'//RxJava2CallAdapterFactory
     api 'io.reactivex.rxjava2:rxandroid:2.1.1'
 
+    api 'com.scwang.smartrefresh:SmartRefreshLayout:1.1.2'
 
     api 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.50'
 
