--- a/comp_im/src/main/AndroidManifest.xml
+++ b/comp_im/src/main/AndroidManifest.xml
@@ -1,9 +1,14 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.a11699.comp_im">
+
     <application>
         <activity android:name=".activity.ImActivity"
-            android:windowSoftInputMode="adjustResize|stateHidden"
+
             />
-        <activity android:name=".activity.MessageActivity"/>
+        <!--  -->
+        <activity android:name=".activity.MessageActivity" />
+        <activity android:name=".activity.AAAA"
+
+            />
     </application>
 </manifest>
