'新增库-lib_custonview,接入丝滑软键盘'

--- a/comp_im/build.gradle
+++ b/comp_im/build.gradle
@@ -28,5 +28,6 @@ dependencies {
     implementation(project(':comp_base'))
     implementation(project(':module_smartrecycleview'))
     implementation(project(':lib_im'))
+    implementation(project(':lib_customview'))
 
 }
