--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,14 +68,11 @@ dependencies {
     implementation(project(':comp_im'))
     implementation(project(':comp_chat'))
     implementation(project(':lib_im'))
-    implementation(project(':lib_save')){
-        exclude group: "com.tencent"
-    }
+    implementation(project(':lib_save'))
 
 
-    api 'com.pince.maven:comp-datasource-new:1.0.0'
-    kapt 'com.pince.maven:comp-repositycp:1.0.1'
-    api "com.pince.maven:comp-annotation:1.0.0"
+  
+
  
 }
 repositories {
