--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,7 +36,8 @@
         <activity android:name=".customtab.TabActivity" />
         <activity android:name=".loadingactivity.WuBaActivity" />
         <activity android:name=".databingstudy.DatabindStudyActivity" />
-        <activity android:name=".batteryview.BatteryActivity"/>
+        <activity android:name=".batteryview.BatteryActivity" />
+        <activity android:name=".lizixiaosan.LiZiActivity" />
         <activity android:name=".LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -44,7 +45,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity"/>
+        <activity android:name=".MainActivity" />
         <activity android:name=".custompasswordview.CustomPasswordActivity" />
     </application>
 
