'camrea和matrix的学习，制作高级特效'

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,6 +38,8 @@
         <activity android:name=".databingstudy.DatabindStudyActivity" />
         <activity android:name=".batteryview.BatteryActivity" />
         <activity android:name=".lizixiaosan.LiZiActivity" />
+        <activity android:name=".threed.ThreedActivity" />
+        <activity android:name=".funnyeffect.FunnyActivity" />
         <activity android:name=".LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
