--- a/comp_base/build.gradle
+++ b/comp_base/build.gradle
@@ -28,8 +28,9 @@ dependencies {
 
     api deps.app_compat
     api deps.constraintlayout
-    api 'androidx.appcompat:appcompat:1.1.0'
-    api 'androidx.constraintlayout:constraintlayout:1.1.3'
+    api 'androidx.appcompat:appcompat:1.2.0'
+    api 'androidx.constraintlayout:constraintlayout:2.0.1'
+    api 'com.android.support.constraint:constraint-layout:2.0.1'//android新得动画库
     testImplementation deps.junit
     androidTestImplementation deps.atsl.ext_junit
     androidTestImplementation deps.espresso.core
