--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,7 +41,8 @@
         <activity android:name=".threed.ThreedActivity" />
         <activity android:name=".funnyeffect.FunnyActivity" />
         <activity android:name=".zhezhi.PaperActivity" />
-        <activity android:name=".drawfish.DrawFishActivity"/>
+        <activity android:name=".drawfish.DrawFishActivity" />
+        <activity android:name=".tofuture.FutureActivity" />
         <activity android:name=".LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
