--- a/comp_animalmehod2/src/main/AndroidManifest.xml
+++ b/comp_animalmehod2/src/main/AndroidManifest.xml
@@ -3,5 +3,7 @@
 
     <application>
         <activity android:name=".AnimaMethod2Activity" />
+        <activity android:name=".animal.AActivity" />
+        <activity android:name=".animal.BActivity"  />
     </application>
 </manifest>
