--- a/module_flop/build.gradle
+++ b/module_flop/build.gradle
@@ -39,4 +39,6 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version"
 
 
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+
 }
