--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,6 +46,7 @@
         <activity android:name=".breath.BreathActivity" />
         <activity android:name=".zhaunchang.TransLationActivity" />
         <activity android:name=".botomtab.BottomTabActivity" />
+        <activity android:name=".bitmap.BitStudyActivity"/>
         <activity
             android:name=".botomtab.CopyTangApp"
             android:theme="@style/fade" />
