--- a/comp_chat/build.gradle
+++ b/comp_chat/build.gradle
@@ -37,7 +37,7 @@ dependencies {
     implementation 'io.github.yuweiguocn:GreenDaoUpgradeHelper:2.2.1'
     implementation 'com.scwang.smartrefresh:SmartRefreshLayout:1.1.2'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
-    implementation 'androidx.lifecycle:lifecycle-runtime:2.2.0'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.2.0'
 }
 
 
