--- a/lib_network/build.gradle
+++ b/lib_network/build.gradle
@@ -1,6 +1,12 @@
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
+
+
+def HOST_URL_M = "http://kdinglive.lkreborn.com"
+def HOST_URL_T = "http://121.196.181.160:9100"
+
+
 android {
     compileSdkVersion build_versions.compile_sdk
     buildToolsVersion build_versions.build_tools
@@ -13,6 +19,10 @@ android {
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles 'consumer-rules.pro'
+
+        buildConfigField "String", "HOST_URL_M", "\"$HOST_URL_M\""
+        buildConfigField "String", "HOST_URL_T", "\"$HOST_URL_T\""
+
     }
 
     buildTypes {
