'修改卡牌位置展示不准的问题，增加自定义Activity实现悬浮窗效果'

--- a/lib_oop/src/main/AndroidManifest.xml
+++ b/lib_oop/src/main/AndroidManifest.xml
@@ -1,4 +1,5 @@
+<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.a11699.lib_util">
+    package="com.example.lib_oop">
 
 </manifest>
