--- a/build.gradle
+++ b/build.gradle
@@ -1,37 +1,37 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
-
 buildscript {
-    ext.kotlin_version = '1.4.0'
+    ext.kotlin_version = '1.3.61'
     apply from: 'version.gradle'
     repositories {
         google()
-        jcenter()
+        jcenter() {
+            url 'https://jcenter.bintray.com/'
+        }
         maven {
             url "https://jitpack.io"
         }
 
-
     }
     dependencies {
+        classpath 'com.hujiang.aspectjx:gradle-android-plugin-aspectjx:2.0.10'
+//        classpath fileTree(dir:'plugins', include:['*.jar'])
         classpath 'com.android.tools.build:gradle:3.6.4'
-
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
-        classpath'org.greenrobot:greendao-gradle-plugin:3.2.2'
+        classpath 'org.greenrobot:greendao-gradle-plugin:3.2.2'
 
-
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
     }
 }
 
 allprojects {
     repositories {
         google()
-        jcenter()
+        jcenter() {
+            url 'https://jcenter.bintray.com/'
+        }
         maven {
             url "https://jitpack.io"
         }
+
 
     }
 }
