--- a/comp_base/build.gradle
+++ b/comp_base/build.gradle
@@ -26,7 +26,7 @@ android {
 
 dependencies {
     api (project(':lib_util'))
-
+    api (project(':lib_oop'))
     api deps.app_compat
     api deps.constraintlayout
     api 'androidx.appcompat:appcompat:1.2.0'
