--- a/comp_base/build.gradle
+++ b/comp_base/build.gradle
@@ -30,7 +30,6 @@ dependencies {
     api deps.app_compat
     api deps.constraintlayout
     api 'androidx.appcompat:appcompat:1.2.0'
-    api 'androidx.constraintlayout:constraintlayout:2.0.1'
     api 'com.android.support.constraint:constraint-layout:2.0.1'//android新得动画库
     testImplementation deps.junit
     androidTestImplementation deps.atsl.ext_junit
@@ -56,5 +55,6 @@ dependencies {
     api 'com.github.bumptech.glide:glide:4.11.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.5.0'
 
-
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
+    implementation 'androidx.lifecycle:lifecycle-runtime:2.2.0'
 }
