--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -50,8 +50,9 @@
         <activity android:name=".bitmap.BitStudyActivity" />
         <activity android:name=".xmlwriteandread.XmlStudyActivity"/>
         <activity android:name=".timepick.TimePickActivity"/>
-        <activity android:name=".meinformation.MeInforMationActivity"/>
-
+        <activity android:name=".meinformation.MeInforMationActivity"
+            />
+        <activity android:name=".inanimal.LiveRoomInAnimalActivity"/>
         <activity
             android:name=".botomtab.CopyTangApp"
             android:theme="@style/fade" />
