--- a/lib_save/build.gradle
+++ b/lib_save/build.gradle
@@ -25,7 +25,7 @@ android {
 }
 
 dependencies {
-    implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation deps.app_compat
     implementation 'com.tencent:mmkv-static:1.2.2'
 }
 
