--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,6 +23,7 @@ android {
         javaCompileOptions {
             annotationProcessorOptions {
                 includeCompileClasspath = true
+                arguments = [AROUTER_MODULE_NAME: project.getName()]
             }
         }
     }
@@ -89,6 +90,7 @@ dependencies {
     implementation(project(':module_flop'))
     implementation(project(':lib_crash'))
     implementation(project(':module_threelogin'))
+    implementation(project(':module_webbp'))
 
     implementation "com.google.android.material:material:1.2.1"
     implementation 'com.android.support:support-dynamic-animation:28.0.0'//实现小球可以上下弹的动画
@@ -104,7 +106,21 @@ dependencies {
 
     implementation "com.facebook.fresco:imagepipeline-okhttp3:1.11.0"
 
+    /**
+     * 使用阿里的路由跳转
+     */
+    implementation 'com.alibaba:arouter-api:1.5.0'
+    kapt 'com.alibaba:arouter-compiler:1.2.2'
+
 }
 repositories {
     mavenCentral()
+}
+
+/**
+ * 写个任务开启activity
+ */
+task run(type: Exec, dependsOn: 'installDebug') {
+    description 'Installs the APK and runs the main activity: "gradlew :samples:???:run"'
+    commandLine "${android.sdkDirectory}/platform-tools/adb", 'shell', 'am', 'start', '-n', 'com.example.a11699.androidxallstudy/.LoginActivity'
 }
