--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 buildscript {
-    ext.kotlin_version = '1.3.61'
+    ext.kotlin_version = "${kotlinVersion}"
     apply from: 'version.gradle'
     repositories {
         google()
