--- a/gradle.properties
+++ b/gradle.properties
@@ -18,3 +18,7 @@ android.useAndroidX=true
 # Automatically convert third-party libraries to use AndroidX
 android.enableJetifier=true
 android.enableBuildCache=false
+kotlinVersion = 1.3.61
+
+GLIDE_VERSION=4.11.0
+DECODER_VERSION=2.0
