--- a/settings.gradle
+++ b/settings.gradle
@@ -23,5 +23,5 @@ include ':comp_im'
 include ':comp_live'
 include ':lib_oop'
 include ':lib_crash'
-include ':module_threelogin'
 include ':module_webbp'
+include ':happy_vm'
