--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,8 @@ buildscript {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         classpath 'org.greenrobot:greendao-gradle-plugin:3.2.2'
-
+        // 注册MobSDK
+        classpath "com.mob.sdk:MobSDK:2018.0319.1724"
     }
 }
 
