--- a/app/build.gradle
+++ b/app/build.gradle
@@ -80,6 +80,7 @@ android {
 }
 
 dependencies {
+
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     testImplementation deps.junit
     androidTestImplementation deps.atsl.ext_junit
@@ -125,6 +126,10 @@ dependencies {
      */
     implementation 'com.alibaba:arouter-api:1.5.0'
     kapt 'com.alibaba:arouter-compiler:1.2.2'
+
+
+
+    implementation "androidx.security:security-crypto:1.1.0-alpha03"
 
 }
 repositories {
