--- a/app/build.gradle
+++ b/app/build.gradle
@@ -106,6 +106,7 @@ dependencies {
     implementation(project(':lib_crash'))
     implementation(project(':module_webbp'))
     implementation(project(':module_webview'))
+    implementation(project(':module_heart'))
 
     implementation "com.google.android.material:material:1.2.1"
     implementation 'com.android.support:support-dynamic-animation:28.0.0'//实现小球可以上下弹的动画
@@ -128,8 +129,17 @@ dependencies {
     kapt 'com.alibaba:arouter-compiler:1.2.2'
 
 
+    implementation 'com.github.1169927533.BaseMavenProject:module_customview:1.4.1'
 
     implementation "androidx.security:security-crypto:1.1.0-alpha03"
+
+
+
+    //lottie依赖
+    implementation 'com.airbnb.android:lottie:3.5.0'
+
+    // Kotlin + coroutines
+    implementation "androidx.work:work-runtime-ktx:2.4.0"//kotlin 选这个
 
 }
 repositories {
