--- a/app/build.gradle
+++ b/app/build.gradle
@@ -106,7 +106,6 @@ dependencies {
     implementation(project(':lib_crash'))
     implementation(project(':module_webbp'))
     implementation(project(':module_webview'))
-    implementation(project(':module_heart'))
 
     implementation "com.google.android.material:material:1.2.1"
     implementation 'com.android.support:support-dynamic-animation:28.0.0'//实现小球可以上下弹的动画
@@ -140,7 +139,8 @@ dependencies {
 
     // Kotlin + coroutines
     implementation "androidx.work:work-runtime-ktx:2.4.0"//kotlin 选这个
-
+    //视图查看器
+    debugImplementation 'com.huya.mobile:Uinspector:1.0.5'
 }
 repositories {
     mavenCentral()
